dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__ack_burst__flushed_context_does_not_double_submit.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG event=on_ack_eliciting prev=Idle next=Scheduled location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_burst.rs
0:00:00.000000000 [main] DEBUG event=on_flush prev=Scheduled next=Flushed location=dc/s2n-quic-dc/src/endpoint/tasks/tests/ack_burst.rs
